# ProxyDownloadManager

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  ProxyDM-design.md  README.md  handoff.md  index.html  next.md  package-lock.json  package.json  pnpm-lock.yaml  proxydm_downloads.json  task.md  test-ws.py  vite.config.ts  write-hud.cjs
.github/workflows/: build.yml  check.yml  pages.yml
browsers-extension/: build.sh
browsers-extension/chrome/: background.js  content.js  manifest.json
browsers-extension/edge/: background.js  content.js  manifest.json
browsers-extension/firefox/: background.js  manifest.json
browsers-extension/shared/: background.js
dist-present/: index.html
dist-present/assets/: index-B8e0zRVN.js
docs/agents/: domain.md
docs/superpowers/plans/: 2026-07-06-proxydm-implementation.md
src/: App.css  App.tsx  DownloadDetailsWindow.tsx  NewDownloadWindow.tsx  app.rs  download.rs  icons.rs  logger.rs  main.rs  main.tsx  persist.rs  startup.rs  tauriClient.ts  tray.rs  types.rs  types.ts  ui.rs  window_focus.rs  ws_server.rs
src-present/: App.tsx  index.html  package.json  tauri-mocks.ts  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: cmd.rs  config.rs  download_manager.rs  event_bus.rs  event_handler.rs  filename.rs  icons.rs  lib.rs  log.rs  logger.rs  main.rs  platform.rs  probe.rs  tray.rs  types.rs  update.rs  worker.rs
src-tauri/src/engine/: chunk.rs  concurrent.rs  file_io.rs  mod.rs  part_progress.rs  single.rs  task_download.rs
src-tauri/src/network/: limiter.rs  mod.rs  pool.rs
src-tauri/src/services/: chunk_planner.rs  mod.rs  network_service.rs  probe_service.rs  settings_service.rs
src-tauri/src/state/: db.rs  facade.rs  gob.rs  mod.rs  runtime.rs
src-tauri/src/types/: config.rs  download.rs  engine_config.rs  error.rs  event.rs
src-tauri/src/ws/: server.rs
src/__tests__/: format.test.ts  progressMap.test.ts  settingsStore.test.ts  speed.test.ts  types.test.ts  url.test.ts  useDownloadEvents.test.ts
src/components/: DialogRenderer.tsx  DownloadRow.tsx  DownloadTable.tsx  Layout.tsx  ProgressMap.tsx  Sidebar.tsx  Toolbar.tsx  columns.tsx
src/components/dialogs/: AboutDialog.tsx  DeleteDialog.tsx  ExtensionDialog.tsx  LogDialog.tsx  NewDownloadDialog.tsx  PropertiesDialog.tsx  ProxyTable.tsx  SettingsDialog.tsx  UpdateResult.tsx
src/constants/: events.json  events.ts
src/contexts/: AppContext.tsx
src/hooks/: useClipboard.ts  useContextMenu.ts  useDialog.ts  useDownloadDetail.ts  useDownloadEvents.ts  useDownloadSpeed.ts  useFileIcons.ts  useSelection.ts  useSettingsForm.ts  useTauriCommands.ts  useUpdateChecker.ts  useWindowManager.ts
src/i18n/: en.ts  index.ts  zh.ts
src/query/: downloadQueries.ts
src/stores/: settingsStore.ts
src/utils/: download.ts  file.ts  format.ts  progressMap.ts  styles.ts  url.ts
