[package]
name = "proxydm"
version = "0.1.0"
edition = "2021"
description = "A download manager built with Rust and egui — multi-threaded, pause/resume, proxy support"

[profile.release]
opt-level = "z"        # Optimize for binary size
lto = true             # Full link-time optimization
codegen-units = 1      # Single codegen unit for max optimization
strip = "symbols"      # Strip debug symbols
panic = "abort"        # Abort on panic (no unwind tables)
# Note: panic="abort" disables backtraces on panics.
# Remove if you need RUST_BACKTRACE=1 debugging.

[dependencies]
eframe = "0.34"
egui = "0.34"
reqwest = { version = "0.13", features = ["blocking", "socks"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
file_icon_provider = "1.0.1"
arboard = "3.4"
rfd = "0.15"
dirs = "6.0"
tungstenite = "0.24"
auto-launch = "0.5"
tray-icon = "0.21"
