[package]
name = "proxydownloadmanager"
version = "0.9.5"
description = "Proxy Download Manager - Multi-threaded download manager with proxy support"
authors = ["fb0sh"]
edition = "2021"

[lib]
name = "proxydownloadmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
auto-launch = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["socks", "stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "net", "io-util", "time", "signal"] }
futures-util = "0.3"
url = "2"
log = "0.4"
tungstenite = "0.24"
base64 = "0.22"
fs2 = "0.4"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
file_icon_provider = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
